Massive commit with many stuff. I have most stuff working. But there are still a lot to do. Checking of input / checking of response from API etc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -925,5 +925,7 @@
 	]
 }</string>
 	<string name="actionAddToFav">Add to Favorites</string>
+	<string name="textLabelNoFavorites">There is no city in your Favorites</string>
+	<string name="textLabelFavorites">Favorites</string>
 
 </resources>
