1. Main Activity UI fixes and Input Validation. 2. Changes in Favourite List date format and alignment of Favourites text moved to centre. 3. City Weather details Acttivty textValues added to Strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -927,5 +927,8 @@
 	<string name="actionAddToFav">Add to Favorites</string>
 	<string name="textLabelNoFavorites">There is no city in your Favorites</string>
 	<string name="textLabelFavorites">Favorites</string>
+	<string name="txtview_label_current_location">Current Location:</string>
+	<string name="label_apptitle">City Weather</string>
+	<string name="label_favourites">Favourites</string>
 
 </resources>
