--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -939,4 +939,5 @@
 
     <string name="action_settings">Settings</string>
 	<string name="hourlyDataTabLabel">Hourly Data</string>
+	<string name="toastNoWeatherData">No weather data available</string>
 </resources>
